# pyo3_demo

./: Cargo.toml  Makefile  pyproject.toml
.github/workflows/: CI.yml
python/pyo3_demo/: __init__.py  main.py
src/: lib.rs
