[package]
name = "pyo3_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyo3_demo"
crate-type = ["cdylib"]

[dependencies]
log = "~0.4"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
pyo3-log = { version = "0.7.0" }

petgraph = { version = "0.6.2" }
